--- a/src/main/resources/static/sys/config.html
+++ b/src/main/resources/static/sys/config.html
@@ -2,7 +2,22 @@
 <html>
 <head>
 <title>参数管理</title>
-#parse("sys/header.html")
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../public/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../public/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../public/plugins/jqgrid/ui.jqgrid-bootstrap.css">
+	<link rel="stylesheet" href="../public/plugins/ztree/css/metroStyle/metroStyle.css">
+	<link rel="stylesheet" href="../public/css/main.css">
+	<script src="../public/libs/jquery.min.js"></script>
+	<script src="../public/plugins/layer/layer.js"></script>
+	<script src="../public/libs/bootstrap.min.js"></script>
+	<script src="../public/libs/vue.min.js"></script>
+	<script src="../public/plugins/jqgrid/grid.locale-cn.js"></script>
+	<script src="../public/plugins/jqgrid/jquery.jqGrid.min.js"></script>
+	<script src="../public/plugins/ztree/jquery.ztree.all.min.js"></script>
+	<script src="../public/js/common.js"></script>
 </head>
 <body>
 <div id="rrapp" v-cloak>
@@ -51,6 +66,6 @@
 	</div>
 </div>
 
-<script src="${rc.contextPath}/js/sys/config.js?_${date.systemTime}"></script>
+<script src="../public/js/sys/config.js"></script>
 </body>
 </html>
