--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>控制台</title>
+    <meta charset="UTF-8">
+    <title>控制台</title>
 </head>
 <body>
-欢迎登录人人权限系统
+欢迎登录刚刚权限系统
+<p>系统特色：前后端完成分离、全静态化页面、RESTful 风格API</p>
+<p>服务端框架：spring boot、jpa、shiro</p>
+<p>代码生成：rapid-generator-3.9.2</p>
+<p>前端框架：jquery、bootstrap、vue.js组件模块化</p>
+<p>数据库：mysql（JPA支持世面上主流数据库）</p>
+<br>
+<p><b>整体借鉴了人人权限系统！感谢！感谢！感谢！</b></p>
+<p>作者 QQ：1048188828 微信：lcgang2012</p>
 </body>
 </html>
