--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>人人权限系统</title>
+    <title>刚刚权限系统</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="public/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
     <div class="login-logo">
-        <b>人人权限系统</b>
+        <b>刚刚权限系统</b>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
@@ -74,7 +74,7 @@
 <script src="public/libs/app.js"></script>
 <script type="text/javascript">
 
-    var baseUrl = 'http://127.0.0.1:8888/';
+    var baseUrl = '/';
 
     var vm = new Vue({
         el: '#rrapp',
